[tool.poetry]
name = "parqueadero"
version = "0.1.0"
description = ""
authors = ["Felipemolina24 <juan_fe59@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
